--- a/shop/package.json
+++ b/shop/package.json
@@ -11,11 +11,13 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.0",
+    "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
