--- a/shop/package.json
+++ b/shop/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rc-component/color-picker": "^3.0.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.76.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
