--- a/shop/package.json
+++ b/shop/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.8.3",
     "@rc-component/color-picker": "^3.0.1",
     "@reduxjs/toolkit": "^2.7.0",
-    "@tanstack/react-query": "^5.76.0",
+    "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-query-devtools": "^5.76.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
